CHANGE LOG / RELEASE NOTES: (Newest to Oldest)

A21.2.021 (ZZ021)
* DuplicateRepeatDistances on Houses reduced to 1000 to combat empty lots.
* New Hidden Decorations and POIs thanks to ideas from the Rebirth community:
    buried_treasure_01 (Deco), buried_treasure_02 (POI)
* Retired the old, huge, ugly, wasteful Office_Bldg_03.
* Added a new Office_Bldg_03, lighter, nastier, nicer looking.

A21.2.020 (ZZ020)
* Fixed installation instructions.
* Fixed biomes.xml issues with decorations.

A21.2.019 (ZZ019)
* Added rwg_tile_gateway_straight_zztong_08.
* Added rwg_tile_gateway_intersection_zztong_01.
* Added rwg_tile_gateway_intersection_zztong_02.
* Added rwg_tile_gateway_intersection_zztong_03.
* Added bartertown_bobx, bartertown_hughx, bartertown_jenx,
    bartertown_joelx, bartertown_rektx.
* Added pump_substation_01, solar_farm_02.
* Changed the DifficultyTier for all Tiles to 0 to assist modders.
* Removed QuestTags from things that shouldn't have quest tags.

A21.2.018 (ZZ018)
* Bug fixes
* Added restaurant_03, warehouse_04, store_s_03, store_s_04, store_xs_16,
    store_s_05, gyroport_01, tfp_docks_01, tfp_docks_05, lot_vacant_03,
    lot_vacant_04, lot_vacant_05, lot_vacant_06, storage_02, trailer_02,
    trailer_park_04.
* Added rwg_tile_gateway_straight_zztong_07, rwg_tile_gateway_t_zztong_02,
    rwg_tile_countryresidential_corner_zztong_01,
    rwg_tile_countryresidential_corner_02, rwg_tile_countryresidential_t_01.
* More infestation quests.

A21.1.017 (ZZ017)
* Updated Teragon configuration file to match newest format.
* Adjustments to POIs based on user feedback.
* Revised rwg_tile_downtown_intersection_zztong_01 to improve performance.
    Adjustments made to the four intersection POIs to match.
* Used DuplicateRepeatDistance to moderate the placement of house and
    wilderness POIs. I'm not trying to take over the world. Honest!
* Smoothed the terrain on many Tiles.
* Moved Quest (qt_zztong) to another modlet. This kind of thing has started