@@ -182,5 +182,6 @@ zztong_warehouse_02,POI,POI,,x,Larsone Inc.,,,,,,,,,,,,,,
 zztong_warehouse_03,POI,POI,,x,Russell Vending Service,,,,,,,,,,,,,,
 zztong_warehouse_04,POI,POI,,x,Far East Exports,,,,,,,,,,,,,,
 zztong_warehouse_05,POI,POI,,x,Quonset Warehouses,,,,,,,,,,,,,,
+zztong_watering_hole_01,POI,POI,,x,Watering Hole,,,,,,,,,,,,,,
 zztong_wind_turbine_01,POI,POI,,x,Wind Turbine (Wilderness),,,,,,,,,,,,,,
 zztong_wind_turbine_02,POI,POI,,x,Wind Turbine (Rural),,,,,,,,,,,,,,
