@@ -14,6 +14,7 @@
   <property name="EditorGroups" value="commercial" />
   <property name="Tags" value="commercial" />
   <property name="QuestTags" value="clear, fetch, infested" />
+  <property name="DuplicateRepeatDistance" value="4000" />
   <property name="SleeperVolumeSize" value="8, 4, 17#10, 3, 29#6, 3, 8#14, 3, 14#11, 3, 14#14, 3, 14#14, 3, 21#9, 3, 14#8, 3, 15#5, 3, 30#15, 3, 15#5, 2, 13#8, 3, 30#8, 3, 14#8, 3, 9#8, 3, 24#11, 3, 14#11, 3, 9#16, 3, 14#11, 3, 12#11, 3, 25#8, 3, 12#16, 3, 22#13, 3, 18#11, 3, 22#11, 3, 16#10, 15, 14#7, 7, 14#9, 5, 8#12, 5, 8#7, 7, 5#7, 8, 17#16, 7, 18" />
   <property name="SleeperVolumeStart" value="2, 2, 21#14, 2, 4#33, 2, 17#25, 2, 3#28, 2, 25#25, 7, 3#25, 7, 18#16, 7, 25#16, 7, 9#10, 7, 3#1, 13, 24#10, 13, 11#16, 13, 11#33, 13, 17#33, 13, 32#25, 13, 17#30, 19, 17#13, 19, 1#25, 19, 1#1, 19, 29#16, 19, 16#7, 20, 16#25, 25, 17#11, 25, 1#1, 25, 19#13, 25, 25#1, 13, 1#5, 31, 4#2, 34, 30#29, 34, 4#14, 31, 3#31, 31, 17#12, 31, 13" />
   <property name="SleeperVolumeGroupId" value="0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,1,1,1,1,1" />
