@@ -1,0 +1,78 @@
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<prefab>
+  <property name="CopyAirBlocks" value="True" />
+  <property name="ExcludeDistantPOIMesh" value="False" />
+  <property name="ExcludePOICulling" value="False" />
+  <property name="DistantPOIYOffset" value="0" />
+  <property name="AllowTopSoilDecorations" value="True" />
+  <property name="DifficultyTier" value="0" />
+  <property name="ShowQuestClearCount" value="1" />
+  <property name="TraderArea" value="False" />
+  <property name="PrefabSize" value="25, 7, 25" />
+  <property name="RotationToFaceNorth" value="2" />
+  <property name="DuplicateRepeatDistance" value="4000" />
+  <property name="YOffset" value="-3" />
+  <property name="Zoning" value="none" />
+  <property name="SleeperVolumeSize" value="17, 5, 21" />
+  <property name="SleeperVolumeStart" value="2, 3, 2" />
+  <property name="SleeperVolumeGroupId" value="0" />
+  <property name="SleeperVolumeGroup" value="S_-Group_Generic_Zombie,4,5" />
+  <property name="SleeperIsLootVolume" value="False" />
+  <property name="SleeperIsQuestExclude" value="False" />
+  <property name="SleeperVolumeFlags" value="0" />
+  <property name="SleeperVolumeTriggeredBy" value=" " />
+  <property name="EditorGroups" value="rural" />
+  <property name="Tags" value="countryresidential,rural,gateway,zzbartertown" />
+  <property name="POIMarkerSize" value="5, 13, 2#1, 1, 1#5, 13, 1#5, 13, 3" />
+  <property name="POIMarkerStart" value="12, 2, -2#6, 3, 23#12, 2, -1#12, 2, -3" />
+  <property name="POIMarkerGroup" value="driveway,stump,driveway,new" />
+  <property name="POIMarkerTags" value="gateway##countryresidential#" />
+  <property name="POIMarkerType" value="PartSpawn,PartSpawn,PartSpawn,PartSpawn" />
+  <property name="POIMarkerPartToSpawn" value="part_zztong_driveway_gateway_05,part_zztong_tree_stump_01,part_driveway_countryresidential_07,part_driveway_rural_02" />
+  <property name="POIMarkerPartRotations" value="2,0,2,2" />
+  <property name="POIMarkerPartSpawnChance" value="1,0.4,1,1" />
+  <property class="Stats">
+    <property name="TotalVertices" value="112387" />
+    <property name="TotalTriangles" value="69987" />
+    <property class="BlockEntities">
+      <property name="Vertices" value="110563" />
+      <property name="Triangles" value="66795" />
+    </property>
+    <property class="ChunkMeshes0">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes1">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes2">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes3">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes4">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes5">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes6">
+      <property name="Vertices" value="1824" />
+      <property name="Triangles" value="3192" />
+    </property>
+  </property>
+  <property class="IndexedBlockOffsets">
+    <property class="quest_wood_trees">
+      <property name="0" value="21, 3, 21" />
+    </property>
+    <property class="POILight">
+      <property name="0" value="13, 3, 11" />
+    </property>
+  </property>
+</prefab>
